Fix Glob and ReadablePathMatcher empty root matching bug
When resolving a glob or relative path with an empty root (like Path.of("")), they were prepended with the directory separator, turning the compiled matcher patterns and paths into absolute ones. This caused matches against relative target paths to fail.

This change prevents prepending the separator when the root path is empty, allowing relative matchers and relative paths to match correctly. We also remove the corresponding leading-slash workaround from DestinationStatusVisitor which had been implemented to bypass this.

BUG: 491085376
GWSQ_IGNORES: no-reply@google.com
PiperOrigin-RevId: 937959126
Change-Id: Ieaa51e7b63d88ce6763e07b85f9460187f30bdd4